# frankenstein

./: .gitignore  README.md  odometry_angular_errors.csv  odometry_position_errors.csv  steering_angle_data.csv  velocity_data.csv
cartographer_files/: Docker_instructions
cartographer_files/configuration_files/: assets_writer_frankenstein.lua  frankenstein.lua  frankenstein.rviz  frankenstein_localization.lua  frankenstein_reality.lua  frankenstein_reality_localization.lua
cartographer_files/docker/: Dockerfile.noetic
cartographer_files/launch/: assets_writer_frankenstein.launch  demo_frankenstein.launch  demo_frankenstein_localization.launch  demo_frankenstein_reality.launch  demo_frankenstein_reality_localization.launch  demo_frankenstein_reality_localization_kidnapped.launch  frankenstein.launch  frankenstein_reality.launch  frankenstein_reality_localization.launch  frankenstein_reality_localization_kidnapped.launch  offline_frankenstein_reality.launch
cartographer_files/urdf/: frankenstein.urdf
frankenstein_description/: CMakeLists.txt  package.xml
frankenstein_description/launch/: rviz.launch
frankenstein_description/meshes/: MICS3-AAAZ90AZ1P01.dae
frankenstein_description/rviz/: frankenstein.rviz  frankenstein_reality.rviz
frankenstein_description/urdf/: frankenstein.gazebo  frankenstein.urdf  frankenstein.xacro  materials.xacro
frankenstein_gazebo/: CMakeLists.txt  package.xml
frankenstein_gazebo/launch/: frankenstein_gazebo.launch  frankenstein_localization_gazebo.launch
frankenstein_gazebo/scripts/: cartographer_launcher.sh
frankenstein_gazebo/worlds/: TAVIL.world
frankenstein_reality/: CMakeLists.txt  package.xml
frankenstein_reality/data/: lidar_data3.txt
frankenstein_reality/data3/gt_poses/: 20240408-104925.json  20240408-104926.json  20240408-104927.json  20240408-104928.json  20240408-104929.json  20240408-104930.json  20240408-104931.json  20240408-104932.json  20240408-104933.json  20240408-104934.json  20240408-104935.json  20240408-104936.json  20240408-104937.json  20240408-104938.json  20240408-104939.json  20240408-104940.json  20240408-104941.json  20240408-104942.json  20240408-104943.json  20240408-104944.json
frankenstein_reality/data3/multi_channel_images/: 20240408-104925.npy  20240408-104926.npy  20240408-104927.npy  20240408-104928.npy  20240408-104929.npy  20240408-104930.npy  20240408-104931.npy  20240408-104932.npy  20240408-104933.npy  20240408-104934.npy  20240408-104935.npy  20240408-104936.npy  20240408-104937.npy  20240408-104938.npy  20240408-104939.npy  20240408-104940.npy  20240408-104941.npy  20240408-104942.npy  20240408-104943.npy  20240408-104944.npy
frankenstein_reality/launch/: amcl.launch  frankenstein_localization_reality.launch  frankenstein_localization_reality_bag.launch  frankenstein_localization_reality_bag_kidnapped.launch  frankenstein_localization_reality_kidnapped.launch  frankenstein_localozation_reality.launch  frankenstein_localozation_reality_bag.launch  frankenstein_reality.launch  frankenstein_reality_bag.launch  frankenstein_reality_bag_recorder.launch  frankenstein_reality_dead_reckoning.launch  frankenstein_reality_dead_reckoning_bag.launch
frankenstein_reality/param/: amcl_params.yaml
frankenstein_reality/scripts/: cartographer_bag_launcher.sh  cartographer_launcher.sh  cartographer_localization_bag_kidnapped_launcher.sh  cartographer_localization_bag_launcher.sh  cartographer_localization_kidnapped_launcher.sh  cartographer_localization_launcher.sh  sick_scan_launcher.sh  submap_to_map_launcher.sh
frankenstein_reality/src/: compare_maps.py  data_organization.py  dataloader.py  datapublisher.cpp  error.py  error_advanced.py  error_distribution_of_model.py  evaluation_model.py  filter_maps.py  glass1.py  glass_filter.py  image_generator.py  image_generator_glass.py  initialPose_finder.py  initialPose_finder_glass.py  merge.cpp  odometry_reality.cpp  odometry_reality_dead_reckoning.cpp  path_plotter.py  scan_filter.cpp  test.py  train_model.py  train_model_parking.py  visualizer_reality.cpp  wrong_calculation.cpp
frankenstein_simulation/: CMakeLists.txt  package.xml
frankenstein_simulation/src/: dynamic_tf_broadcaster.py  listen_tf.py  odometry.cpp  plotter.py
gazebo_3wheel_plugin/: CMakeLists.txt  package.xml
gazebo_3wheel_plugin/src/: gazebo_3wheel_plugin.cpp
